<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/main_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/d_12"
            android:layout_marginTop="@dimen/d_12"
            android:src="@drawable/icon_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/app_icon"
            app:layout_constraintBottom_toTopOf="@id/et_sign_up_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_sign_up_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/d_24"
            android:layout_marginBottom="@dimen/d_12"
            android:background="@drawable/edit_text_background"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/d_12"
            android:paddingVertical="@dimen/d_12"
            android:textColor="@color/black"
            android:textSize="@dimen/text_20"
            app:layout_constraintBottom_toTopOf="@id/et_sign_up_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_sign_up_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/d_24"
            android:background="@drawable/edit_text_background"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/d_12"
            android:paddingVertical="@dimen/d_12"
            android:textColor="@color/black"
            android:textSize="@dimen/text_20"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_sign_up_re_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/d_24"
            android:layout_marginTop="@dimen/d_12"
            android:background="@drawable/edit_text_background"
            android:hint="@string/re_enter_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/d_12"
            android:paddingVertical="@dimen/d_12"
            android:textColor="@color/black"
            android:textSize="@dimen/text_20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_sign_up_password" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_sign_up"
            style="@style/main_button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="48dp"
            android:layout_marginTop="@dimen/d_20"
            android:text="@string/sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_sign_up_re_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>