<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_background">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/d_12"
            android:layout_marginTop="@dimen/d_12"
            android:src="@drawable/icon_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/app_icon"
            app:layout_constraintBottom_toTopOf="@id/tv_title_reset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/d_24"
            android:layout_marginBottom="@dimen/d_12"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:text="@string/title_reset_password"
            android:textColor="@color/black"
            android:textSize="@dimen/text_18"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/et_email_reset"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_email_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/d_24"
            android:layout_marginBottom="@dimen/d_12"
            android:background="@drawable/edit_text_background"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/d_12"
            android:paddingVertical="@dimen/d_12"
            android:textColor="@color/black"
            android:textSize="@dimen/text_20"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_send_reset_mail"
            style="@style/main_button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="48dp"
            android:layout_marginTop="@dimen/d_20"
            android:text="@string/send_mail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_email_reset" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>